web/book/tests/snapshots/snapshot__queries__functions__piping__2.snap
---
source: web/book/tests/snapshot.rs
expression: "let fahrenheit_to_celsius = temp -> (temp - 32) / 1.8\nlet interp = low:0 high x -> (x - low) / (high - low)\n\nfrom kettles\nderive boiling_proportion = (temp_c | fahrenheit_to_celsius | interp 100)\n"
---
SELECT
  *,
  ((temp_c - 32 * 1.0 / 1.8) - 0 * 1.0 / 100 - 0) AS boiling_proportion
FROM
  kettles

